crates/hir-ty/tests/snapshots/jls_decl_warnings__enum_constant_body_scope.snap
---
source: crates/hir-ty/tests/jls_decl_warnings.rs
expression: out
---
FILE /src/com/example/Cases.java:
package com.example;

import java.util.List;

enum Cases {
    @SuppressWarnings("rawtypes")
    A {
        List raw;
    },
    B {
        List raw;
    };
}

@10:8: raw-type-use: Raw use of parameterized class 'List'
