crates/hir-ty/tests/snapshots/jls_decl_warnings__field_scope_covers_its_own_type.snap
---
source: crates/hir-ty/tests/jls_decl_warnings.rs
expression: out
---
FILE /src/com/example/Field.java:
package com.example;

import java.util.List;

class Field {
    @SuppressWarnings("rawtypes")
    List suppressed;

    List control;
}

@8:4: raw-type-use: Raw use of parameterized class 'List'
