crates/hir-ty/tests/snapshots/jls_decl_warnings__fully_qualified_annotation_suppresses.snap
---
source: crates/hir-ty/tests/jls_decl_warnings.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.List;

class Body {
    @java.lang.SuppressWarnings("rawtypes")
    void m(List xs) {
    }
}
