crates/hir-ty/tests/snapshots/jls_decl_warnings__parameterized_and_non_generic_are_not_raw.snap
---
source: crates/hir-ty/tests/jls_decl_warnings.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.List;

class Body {
    void parameterized(List<String> xs) {
    }

    void nonGeneric(String s) {
    }
}
