crates/hir-ty/tests/snapshots/jls_decl_warnings__raw_parameter_type.snap
---
source: crates/hir-ty/tests/jls_decl_warnings.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.List;

class Body {
    void m(List xs) {
    }
}

@5:11: raw-type-use: Raw use of parameterized class 'List'
