crates/hir-ty/tests/snapshots/jls_decl_warnings__raw_supertype.snap
---
source: crates/hir-ty/tests/jls_decl_warnings.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.ArrayList;

class Body extends ArrayList {
}

@4:19: raw-type-use: Raw use of parameterized class 'ArrayList'
