crates/hir-ty/tests/snapshots/jls_decl_warnings__rawtypes_key_from_constant.snap
---
source: crates/hir-ty/tests/jls_decl_warnings.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.List;

class Body {
    static final String K = "rawtypes";

    @SuppressWarnings(K)
    void m(List xs) {
    }

    @SuppressWarnings(Body.K)
    void qualified(List xs) {
    }

    void control(List xs) {
    }
}

@15:17: raw-type-use: Raw use of parameterized class 'List'
