crates/hir-ty/tests/snapshots/jls_decl_warnings__rawtypes_key_spelled_with_unicode_escape.snap
---
source: crates/hir-ty/tests/jls_decl_warnings.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.List;

class Body {
    @SuppressWarnings("\u0072awtypes")
    void m(List xs) {
    }
}
